--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/testing-library": "0.2.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
     "react-dom": "^18.2.0",
