--- a/packages/ui/deno.json
+++ b/packages/ui/deno.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jurassicjs/ui",
+  "name": "@bungas/ui",
   "version": "0.0.3",
   "exports": "./mod.ts",
   "description": "A simple, fast, and lightweight web server for Deno.",
